--- a/css/style.css
+++ b/css/style.css
@@ -1,39 +1,3 @@
-*{
-    margin:0;
-}
-
-.nav-bar {
-    width: 100%;
-    height: 64px;
-    background-color: burlywood;
-}
-
-.content{
-    width: 70%;
-    height: 1000px;
-    background-color: chocolate;
-    display: inline-block;
-}
-
-.menu{
-    width: 30%;
-    height: 1000px;
-    background-color: blueviolet;
-    float: right;
-    
-}
-
-li{
-    display: inline;
-}
-
-
-
-.nav-bar_right{
-    background-color: blueviolet;
-    width: 40%;
-    height: 100%;
-    vertical-align: middle;
-    align-content: center;
-}
+@import url(general.css);
+@import url(navbar.css);
 
