--- a/css/navbar.css
+++ b/css/navbar.css
@@ -29,3 +29,37 @@
     float: left;
     padding: 15px;
 }
+
+.search_in{
+    background-color: rgba(0,0,0,.05);
+    border: none;
+    border-radius: 4px;
+    box-sizing: border-box;
+    color: rgba(0,0,0,.87);
+    font-size: .875rem;
+    outline: 0;
+    transition: color .36s;
+    direction: rtl;
+    width: 50%;
+    margin: 8px 0px 0px 0px;
+    padding: 8px;
+} 
+.search_in::placeholder{
+    color: rgba(0,0,0,.25);
+}
+
+.kt-divider {
+	display: inline-block;
+	height: 1.5rem;
+	width: 1px;
+    margin-top: 20px;
+    background-color: rgba(0,0,0,.12);
+    border: none;
+    box-sizing: border-box;
+    margin: 0;
+}
+
+.nav-bar-right-buttons{
+    padding: 10px;
+    float: left;
+
