--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,43 +1,46 @@
-.nav-bar{
+.nav-bar {
     width: 100%;
     height: 64px;
     background-color: #fff;
-    box-shadow: 0 1px 2px 0 rgba(0,0,0,.12);
-    
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .12);
+
 }
+
+/* --------------------------------------------- */
 /* nav-bar-left */
-.nav-bar-left{
+.nav-bar-left {
     width: 30%;
     height: 100%;
     float: left;
 }
 
-.nav-bar-left ul{
+.nav-bar-left ul {
     text-align: center;
     list-style-type: none;
     margin-left: 60px;
 }
 
-.nav-bar-left li{
+.nav-bar-left li {
     display: inline;
     float: left;
     padding: 15px;
 }
+
 /* --------------------------------------------- */
 /* nav-bar-center */
 
-.nav-bar-center{
+.nav-bar-center {
     width: 40%;
     height: 100%;
     float: left;
 }
 
-.search_in{
-    background-color: rgba(0,0,0,.05);
+.search_in {
+    background-color: rgba(0, 0, 0, .05);
     border: none;
     border-radius: 4px;
     box-sizing: border-box;
-    color: rgba(0,0,0,.87);
+    color: rgba(0, 0, 0, .87);
     font-size: .875rem;
     outline: 0;
     transition: color .36s;
@@ -46,48 +49,48 @@
     margin: 8px 10px 0px 0px;
     padding: 8px;
     float: right;
-} 
-.search_in::placeholder{
-    color: rgba(0,0,0,.25);
+}
+
+.search_in::placeholder {
+    color: rgba(0, 0, 0, .25);
 }
 
 /* --------------------------------------------- */
 /* nav-bar-right */
 
-.nav-bar-right{
+.nav-bar-right {
     width: 30%;
     height: 100%;
     float: left;
 }
 
-.nav-bar-right a{
+.nav-bar-right a {
     padding: 15px;
     float: left;
 }
 
-.categories{
+.categories {
     margin-left: 70px;
 }
 
-.place{
+.place {
     margin-left: 30px;
 }
 
 .kt-divider {
-	display: inline-block;
-	height: 1.5rem;
-	width: 1px;
+    display: inline-block;
+    height: 1.5rem;
+    width: 1px;
     margin: 20px 0px;
-    background-color: rgba(0,0,0,.12);
+    background-color: rgba(0, 0, 0, .12);
     border: none;
     box-sizing: border-box;
 
 }
 
-.logo-divar{
+.logo-divar {
     width: 48px;
     height: 48px;
     margin-left: 50px;
     margin-bottom: 8px;
 }
-
