--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,65 @@
+/* --------------------------------- */
+/* menu */
 .menu{
     width: 20%;
     height:  calc(100vh - 64px);
-    background-color: aqua;
+    background-color: #fff;
     float: right;
     margin-right: 40px;
+    text-align: right;
+    padding-right: 20px;
 }
 
+.menu h2{
+    font-size: 0.75rem;
+    font-weight: 400;
+    padding: 10px;
+
+}
+
+.menu a{
+    font-size: 0.9rem;
+    display: block;
+    padding: 0px 20px 10px 0;
+    cursor: pointer;
+    line-height: 2;
+    color: gray;
+}
+
+.mps{
+    font-weight: 500;
+    color: black !important;
+    margin: 10px 0px;
+}
+
+.menu-links{
+    text-align: center;
+}
+.menu-links ul{
+    list-style-type: none;
+    margin-right: 10px;
+
+    }
+.menu-links li{
+    float: right;
+    color: gray;
+    padding-left: 15px;
+    font-weight: 100;
+    font-size: 0.75rem;
+    line-height: 3;
+}
+
+.menu span{
+    color: #a62626;
+}
+
+/* -------------------------------------- */
+/* ads */
 .ads{
     width: 70%;
     height:calc(100vh - 64px);;
-    background-color: burlywood;
+    background-color: #fff;
     margin-top: 32px;
-    margin-left: 40px;
     padding-left: 50px;
     overflow: scroll;
     
@@ -22,9 +70,9 @@
 
 .ad{
     width: 28%;
-    height: 184px;
+    height: 168px;
     padding: 8px;
-    border: 1px solid gray;
+    border: 1px solid rgb(211, 211, 211);
     border-radius: 4px;
     margin-top: 15px;
     margin-left: 15px;
