--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
+
 @import url(general.css);
 @import url(navbar.css);
 @import url(main.css);
+@import url(../font/fontawesome-free-6.2.0-web/css/all.css);
 
