--- a/css/navbar.css
+++ b/css/navbar.css
@@ -25,6 +25,23 @@
     float: left;
     padding: 15px;
 }
+.btn{
+    background-color: #be3737;
+    border-radius: 4px;
+    padding: 5px 10px;
+    color: #fff;
+}
+.nav-bar-left li>a{
+    padding: 5px;
+    border-radius: 4px;
+}
+.nav-bar-left li>a:hover{
+    background-color: rgb(231, 231, 231);
+}
+
+.btn:hover{
+    background-color:  #c45050 !important ;
+}
 
 /* --------------------------------------------- */
 /* nav-bar-center */
