--- a/css/navbar.css
+++ b/css/navbar.css
@@ -32,6 +32,7 @@
     color: #fff;
 }
 .nav-bar-left li>a{
+    color: rgba(0, 0, 0, .57);
     padding: 5px;
     border-radius: 4px;
 }
@@ -82,6 +83,7 @@
 }
 
 .nav-bar-right a {
+    color: rgba(0, 0, 0, .57);
     float: left;
     padding-top: 15px;
 }
