--- a/css/main.css
+++ b/css/main.css
@@ -105,6 +105,14 @@
 
 }
 
+.ads>p{
+    direction: ltr;
+    margin-left: 15px;
+    font-weight: 50 !important;
+    font-size: 15px !important;
+    color: gray;
+}
+
 .ads::-webkit-scrollbar {
     display: none;
 }
