--- a/css/navbar.css
+++ b/css/navbar.css
@@ -17,7 +17,7 @@
 .nav-bar-left ul {
     text-align: center;
     list-style-type: none;
-    margin-left: 60px;
+    margin-left: 12px;
 }
 
 .nav-bar-left li {
@@ -50,10 +50,13 @@
 /* --------------------------------------------- */
 /* nav-bar-center */
 
-.nav-bar-center {
+/* .nav-bar-center {
     width: 40%;
     height: 100%;
     float: left;
+    background-color: rgba(0, 0, 0, .05);
+ 
+    
 }
 
 .search_in {
@@ -66,11 +69,30 @@
     outline: 0;
     transition: color .36s;
     direction: rtl;
-    width: 70%;
-    margin: 8px 10px 0px 0px;
+    width: 80%;
+    margin: 8px 0px 0px 0px;
     padding: 8px;
     float: right;
+} */
+
+.nav-bar-center {
+    width: 40%;
+    height: 80%;
+    float: left;
+    background-color: rgba(0, 0, 0, .05);
+    border-radius: 5px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
+
+.search_in {
+    float: right;
+    background-color: rgba(0, 0, 0, .05);
+    border: none;
+    border-radius: 4px;
+}
+
+
 
 .search_in::placeholder {
     color: rgba(0, 0, 0, .25);
